# event-parser

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
date_time_parser/: Cargo.toml
date_time_parser/src/: date_parse.rs  lib.rs  recognizable.rs  time_parse.rs
doc/aho_corasick/: struct.AhoCorasick.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html
doc/chrono/: enum.Weekday.html  struct.DateTime.html
doc/datetimeparser/: all.html
doc/datetimeparser/date_parse/: struct.DateParser.html
doc/datetimeparser/recognizable/: trait.Recognizable.html
doc/datetimeparser/time_parse/: index.html  struct.TimeParser.html
doc/eventparser/: fn.to_event.html
doc/eventparser/date_parse/: index.html
doc/eventparser/recognizable/: trait.Recognizable.html
doc/eventparser/time_parse/: enum.TimeParseError.html  index.html
doc/icalendar/: enum.Class.html  enum.ValueType.html  struct.Event.html  struct.Property.html  trait.Component.html
doc/icalendar/calendar/: struct.Calendar.html
doc/icalendar/properties/: enum.Class.html  enum.TodoStatus.html  enum.ValueType.html
doc/implementors/icalendar/: trait.Component.js
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/aho_corasick/: enum.ErrorKind.html  enum.MatchKind.html  struct.AhoCorasickBuilder.html  struct.Error.html
docs/chrono/naive/: struct.NaiveDate.html  struct.NaiveDateTime.html  struct.NaiveTime.html
docs/datetimeparser/: index.html  sidebar-items.js
docs/datetimeparser/date_parse/: index.html  sidebar-items.js
docs/datetimeparser/recognizable/: index.html
docs/eventparser/: all.html  index.html  sidebar-items.js
docs/eventparser/date_parse/: enum.DateParseError.html  struct.DateParser.html
docs/eventparser/recognizable/: index.html  sidebar-items.js
docs/icalendar/: all.html  enum.EventStatus.html  enum.TodoStatus.html  index.html  sidebar-items.js  struct.Calendar.html  struct.Parameter.html  struct.Todo.html
event_parser/: Cargo.toml
event_parser/src/: lib.rs
eventparser/: .gitignore
eventparser/src/: lib.rs  main.rs
src/: bin.rs  date_parse.rs  lib.rs  main.rs  recognizable.rs  time_parse.rs
(+30 files in other folders)
