[package]
name = "eventparser"
version = "0.1.0"
authors = ["Isaac Lee <isaacrlee@gmail.com>", "Alex Grimes <alexkgrimes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
icalendar = "0.6.0"
regex = "1"

[lib]
name = "date_time_parser"
path = "src/lib.rs"

[[bin]]
name = "eventparser"
path = "src/bin.rs"