[package]
name = "event_parser_command_line_tool"
version = "0.1.0"
authors = ["Isaac Lee <isaacrlee@gmail.com>", "Alex Grimes <alexkgrimes@gmail.com>"]
edition = "2018"

[dependencies]
event_parser = {path = "./event_parser"}

[[bin]]
name = "event_parser_command_line_tool"
path = "src/bin.rs"

[workspace]
members = [
    "event_parser"
]