[package]
name = "date_time_parser"
version = "0.2.0"
authors = ["Isaac Lee <isaacrlee@gmail.com>", "Alex Grimes <alexkgrimes@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust NLP library for parsing English natural language into dates and times"
repository = "https://github.com/isaacrlee/event-parser"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"