[package]
name = "event_parser"
version = "0.1.0"
authors = ["Isaac Lee <isaacrlee@gmail.com>", "Alex Grimes <alexkgrimes@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust NLP library for parsing English natural language into icalendar events"
repository = "https://github.com/isaacrlee/event-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4"
icalendar = "0.6.0"
date_time_parser = "0.1.0"